--- a/Stealth777/Modules/CHAT/GroupChat/View/GroupChatStoryboard.storyboard
+++ b/Stealth777/Modules/CHAT/GroupChat/View/GroupChatStoryboard.storyboard
@@ -68,19 +68,19 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="777-Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwJ-na-ZJq" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="154.66666666666666" y="198" width="118.99999999999997" height="21.666666666666657"/>
+                                <rect key="frame" x="154.66666666666666" y="198" width="118.99999999999997" height="21"/>
                                 <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hau-z0-yS7" customClass="UIViewCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="32" y="249.66666666666663" width="168" height="79"/>
+                                <rect key="frame" x="32" y="249" width="168" height="79"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileMsgIcon" translatesAutoresizingMaskIntoConstraints="NO" id="TpI-fg-zFY">
-                                        <rect key="frame" x="71.333333333333329" y="19.666666666666657" width="25.333333333333329" height="25"/>
+                                        <rect key="frame" x="71.333333333333329" y="20" width="25.333333333333329" height="25"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6t-y6-JW2" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="59.666666666666671" y="52.666666666666657" width="49" height="14.333333333333329"/>
+                                        <rect key="frame" x="59.666666666666671" y="53" width="49" height="14"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
                                         <color key="textColor" name="SecondaryThemeColor"/>
                                         <nil key="highlightedColor"/>
@@ -112,16 +112,16 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WaS-EU-vt2" customClass="UIViewCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="228" y="249.66666666666663" width="168" height="79"/>
+                                <rect key="frame" x="228" y="249" width="168" height="79"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8J-so-3DW" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="59.666666666666686" y="52.666666666666657" width="49" height="14.333333333333329"/>
+                                        <rect key="frame" x="59.666666666666686" y="53" width="49" height="14"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="12"/>
                                         <color key="textColor" name="SecondaryThemeColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="QRIcon" translatesAutoresizingMaskIntoConstraints="NO" id="7k5-Ml-sGM">
-                                        <rect key="frame" x="70" y="14.666666666666657" width="28" height="30"/>
+                                        <rect key="frame" x="70" y="15" width="28" height="30"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -151,7 +151,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M1t-BZ-KEv" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="32" y="358.66666666666669" width="364" height="45"/>
+                                <rect key="frame" x="32" y="358" width="364" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="joH-BL-dvy"/>
@@ -168,7 +168,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VGM-KU-94j" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="32" y="407.66666666666669" width="364" height="45"/>
+                                <rect key="frame" x="32" y="407" width="364" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="FJY-vi-Aug"/>
@@ -185,7 +185,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikd-G3-PdN" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="32" y="456.66666666666669" width="364" height="45"/>
+                                <rect key="frame" x="32" y="456" width="364" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -199,7 +199,7 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MRx-y1-3nL" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="32" y="505.66666666666674" width="364" height="45"/>
+                                <rect key="frame" x="32" y="505" width="364" height="45"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="FZl-zm-DRe"/>
@@ -252,10 +252,10 @@
             </objects>
             <point key="canvasLocation" x="2376" y="89"/>
         </scene>
-        <!--Group Details View Controller-->
+        <!--Create Group View Controller-->
         <scene sceneID="Uva-ss-t0L">
             <objects>
-                <viewController storyboardIdentifier="GroupDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gTW-nB-mPq" customClass="GroupDetailsViewController" customModule="Stealth777" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateGroupViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gTW-nB-mPq" customClass="CreateGroupViewController" customModule="Stealth777" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2bO-Xd-7WA">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -537,6 +537,39 @@
             </objects>
             <point key="canvasLocation" x="736" y="84"/>
         </scene>
+        <!--Group Details View Controller-->
+        <scene sceneID="73n-qk-48O">
+            <objects>
+                <viewController storyboardIdentifier="GroupDetailsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Tva-Mk-TUb" customClass="GroupDetailsViewController" customModule="Stealth777" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Scc-iM-eQL">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lE0-89-Gp9">
+                                <rect key="frame" x="30" y="44" width="368" height="848"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Tva-Mk-TUb" id="pi7-gr-4mo"/>
+                                    <outlet property="delegate" destination="Tva-Mk-TUb" id="GvE-aM-SDl"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="CmY-4A-jga"/>
+                        <color key="backgroundColor" name="ViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="lE0-89-Gp9" firstAttribute="leading" secondItem="CmY-4A-jga" secondAttribute="leading" constant="30" id="L3L-6K-Avn"/>
+                            <constraint firstItem="CmY-4A-jga" firstAttribute="trailing" secondItem="lE0-89-Gp9" secondAttribute="trailing" constant="30" id="Qc9-YB-zVj"/>
+                            <constraint firstItem="CmY-4A-jga" firstAttribute="bottom" secondItem="lE0-89-Gp9" secondAttribute="bottom" id="Ztw-dZ-dVR"/>
+                            <constraint firstItem="lE0-89-Gp9" firstAttribute="top" secondItem="CmY-4A-jga" secondAttribute="top" id="lWG-B4-omU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="groupDetailsListTableView" destination="lE0-89-Gp9" id="WRI-Kf-xEY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9cN-jP-lgv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3396.7289719626165" y="102.3758099352052"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="9n4-ar-mFz">
@@ -551,8 +584,14 @@
         <designable name="MRx-y1-3nL">
             <size key="intrinsicContentSize" width="76" height="31"/>
         </designable>
+        <designable name="Pts-fQ-9ou">
+            <size key="intrinsicContentSize" width="90" height="20.666666666666668"/>
+        </designable>
         <designable name="R6t-y6-JW2">
             <size key="intrinsicContentSize" width="49" height="14.333333333333334"/>
+        </designable>
+        <designable name="RW0-63-son">
+            <size key="intrinsicContentSize" width="54" height="54"/>
         </designable>
         <designable name="VGM-KU-94j">
             <size key="intrinsicContentSize" width="137" height="31"/>
@@ -567,7 +606,7 @@
             <size key="intrinsicContentSize" width="124" height="124"/>
         </designable>
         <designable name="xOd-6u-RzY">
-            <size key="intrinsicContentSize" width="93.333333333333329" height="18.666666666666668"/>
+            <size key="intrinsicContentSize" width="103.33333333333333" height="18.666666666666668"/>
         </designable>
         <designable name="zO4-RP-2YO">
             <size key="intrinsicContentSize" width="330.33333333333331" height="16.666666666666668"/>
@@ -576,7 +615,7 @@
     <resources>
         <image name="QRIcon" width="28" height="30"/>
         <image name="cameraIcon" width="54" height="54"/>
-        <image name="chatScreenBg" width="428" height="926"/>
+        <image name="chatScreenBg" width="428" height="918"/>
         <image name="face.smiling" catalog="system" width="128" height="121"/>
         <image name="plusIcon" width="18" height="19"/>
         <image name="privateAvatar" width="124" height="124"/>
