--- a/Stealth777/Modules/LOGIN/View/LoginStoryboard.storyboard
+++ b/Stealth777/Modules/LOGIN/View/LoginStoryboard.storyboard
@@ -106,6 +106,9 @@
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZqE-jv-pT6">
                                 <rect key="frame" x="335" y="499.5" width="51" height="31"/>
+                                <connections>
+                                    <action selector="loginWithFaceIdSwitch:" destination="Y6W-OH-hqX" eventType="valueChanged" id="mFu-yx-qGN"/>
+                                </connections>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="beS-FK-mJG" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
                                 <rect key="frame" x="109.5" y="584.5" width="195" height="52.5"/>
@@ -178,6 +181,10 @@
                             <constraint firstItem="qBS-3t-y5X" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="yEB-dG-vUf"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="OkI-Qu-v1n"/>
+                    <connections>
+                        <outlet property="loginWithFaceIdSwitch" destination="ZqE-jv-pT6" id="xET-7k-C9l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
