--- a/Stealth777/Modules/SETTINGS/View/SettingsStoryboard.storyboard
+++ b/Stealth777/Modules/SETTINGS/View/SettingsStoryboard.storyboard
@@ -6,8 +6,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Medium.ttf">
+            <string>Roboto-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--General Settings View Controller-->
         <scene sceneID="Bs3-SZ-yhK">
@@ -25,23 +31,87 @@
                                     <outlet property="delegate" destination="W80-d8-bE8" id="hZw-20-uKe"/>
                                 </connections>
                             </tableView>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UW8-gZ-N98">
+                                <rect key="frame" x="0.0" y="634" width="414" height="262"/>
+                                <subviews>
+                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ytF-0w-u2a">
+                                        <rect key="frame" x="0.0" y="46" width="414" height="216"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="W80-d8-bE8" id="auf-te-4sA"/>
+                                        </connections>
+                                    </pickerView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e2U-PY-zUt" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                        <rect key="frame" x="361" y="5" width="33" height="29"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Done">
+                                            <color key="titleColor" name="SecondaryThemeColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="doneBtnAction:" destination="W80-d8-bE8" eventType="touchUpInside" id="hqv-zo-ceN"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ddV-1L-gbm" customClass="UIButtonCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="5" width="43" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="KcN-7O-SNr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleColor" name="subHeadingColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelBtnAction:" destination="W80-d8-bE8" eventType="touchUpInside" id="8Ah-rs-jcX"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvt-x2-gJt">
+                                        <rect key="frame" x="0.0" y="45" width="414" height="1"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="5or-Tc-i2E"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" name="SeperatorColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="ytF-0w-u2a" secondAttribute="bottom" id="8CX-rk-kl3"/>
+                                    <constraint firstItem="e2U-PY-zUt" firstAttribute="top" secondItem="UW8-gZ-N98" secondAttribute="top" constant="5" id="OWg-eF-3vG"/>
+                                    <constraint firstItem="ytF-0w-u2a" firstAttribute="leading" secondItem="UW8-gZ-N98" secondAttribute="leading" id="SKr-SI-W7T"/>
+                                    <constraint firstItem="Gvt-x2-gJt" firstAttribute="leading" secondItem="UW8-gZ-N98" secondAttribute="leading" id="Tpo-rI-WhD"/>
+                                    <constraint firstAttribute="trailing" secondItem="ytF-0w-u2a" secondAttribute="trailing" id="Wzr-ws-6Tu"/>
+                                    <constraint firstAttribute="trailing" secondItem="e2U-PY-zUt" secondAttribute="trailing" constant="20" id="Yz1-jc-J8h"/>
+                                    <constraint firstItem="ytF-0w-u2a" firstAttribute="top" secondItem="Gvt-x2-gJt" secondAttribute="bottom" id="ZTF-0t-Z30"/>
+                                    <constraint firstItem="ddV-1L-gbm" firstAttribute="leading" secondItem="UW8-gZ-N98" secondAttribute="leading" constant="20" id="aKI-HV-efe"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gvt-x2-gJt" secondAttribute="trailing" id="noW-CE-Cw8"/>
+                                    <constraint firstItem="Gvt-x2-gJt" firstAttribute="top" secondItem="ddV-1L-gbm" secondAttribute="bottom" id="sen-w7-ycI"/>
+                                    <constraint firstItem="ddV-1L-gbm" firstAttribute="top" secondItem="UW8-gZ-N98" secondAttribute="top" constant="5" id="xPb-vM-s15"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yxd-hA-5Rx"/>
                         <color key="backgroundColor" name="ViewBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="yxd-hA-5Rx" firstAttribute="bottom" secondItem="7OF-62-eGJ" secondAttribute="bottom" id="0RF-Hd-vms"/>
+                            <constraint firstItem="UW8-gZ-N98" firstAttribute="leading" secondItem="Wec-63-RQE" secondAttribute="leading" id="3l2-pA-NDG"/>
+                            <constraint firstAttribute="bottom" secondItem="UW8-gZ-N98" secondAttribute="bottom" id="5xt-DM-VFh"/>
+                            <constraint firstAttribute="trailing" secondItem="UW8-gZ-N98" secondAttribute="trailing" id="Skx-dJ-ejf"/>
                             <constraint firstItem="7OF-62-eGJ" firstAttribute="leading" secondItem="yxd-hA-5Rx" secondAttribute="leading" constant="30" id="cv0-sz-Jbd"/>
                             <constraint firstItem="yxd-hA-5Rx" firstAttribute="trailing" secondItem="7OF-62-eGJ" secondAttribute="trailing" constant="30" id="kqM-I6-ElN"/>
                             <constraint firstItem="7OF-62-eGJ" firstAttribute="top" secondItem="yxd-hA-5Rx" secondAttribute="top" constant="30" id="tRc-TR-YQs"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="pickerBgView" destination="UW8-gZ-N98" id="sfr-04-xtZ"/>
+                        <outlet property="pickerView" destination="ytF-0w-u2a" id="Rka-WB-m4O"/>
                         <outlet property="settingsListTableView" destination="7OF-62-eGJ" id="RMm-wJ-QvZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F3j-fJ-1HK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2587" y="94"/>
+            <point key="canvasLocation" x="2586.9565217391305" y="93.75"/>
         </scene>
         <!--Account Settings View Controller-->
         <scene sceneID="OIy-dm-azo">
@@ -112,9 +182,26 @@
             <point key="canvasLocation" x="1867" y="94"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="ddV-1L-gbm">
+            <size key="intrinsicContentSize" width="43" height="29"/>
+        </designable>
+    </designables>
     <resources>
+        <namedColor name="SecondaryThemeColor">
+            <color red="0.0" green="0.73299998044967651" blue="0.95300000905990601" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SeperatorColor">
+            <color red="0.85490196078431369" green="0.85490196078431369" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="ViewBackgroundColor">
             <color red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="subHeadingColor">
+            <color red="0.43529411764705883" green="0.43529411764705883" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
