--- a/Stealth777/Modules/SIGN UP/View/EnterPasswordStoryboard.storyboard
+++ b/Stealth777/Modules/SIGN UP/View/EnterPasswordStoryboard.storyboard
@@ -17,7 +17,7 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Import Wallet-->
+        <!--Enter Password View Controller-->
         <scene sceneID="dcS-fs-1KD">
             <objects>
                 <viewController storyboardIdentifier="EnterPasswordViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="cP3-Rg-FS5" customClass="EnterPasswordViewController" customModule="Stealth777" customModuleProvider="target" sceneMemberID="viewController">
@@ -28,21 +28,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O2l-NJ-Qya">
                                 <rect key="frame" x="30" y="187.33333333333334" width="368" height="46.333333333333343"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter Password" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="N2I-T0-Myw" customClass="UITextViewCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="2" width="333" height="44"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="textColor" name="textFieldPlaceholderColor"/>
-                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" secureTextEntry="YES"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="horizontalInset">
-                                                <real key="value" value="0.0"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <outlet property="delegate" destination="cP3-Rg-FS5" id="v3T-Qi-Fcv"/>
-                                        </connections>
-                                    </textView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dO-e7-qoA">
                                         <rect key="frame" x="0.0" y="46" width="368" height="0.3333333333333357"/>
                                         <color key="backgroundColor" name="textFieldSeperatorColor"/>
@@ -62,19 +47,34 @@
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" image="eye.slash" catalog="system"/>
                                     </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mtD-lE-chP" customClass="UITextFieldCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="46"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" name="textFieldColor"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                                <color key="value" name="textFieldPlaceholderColor"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="horizontalInset">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="mtD-lE-chP" firstAttribute="leading" secondItem="O2l-NJ-Qya" secondAttribute="leading" id="1kC-wR-6d9"/>
                                     <constraint firstItem="2zR-Eo-JAU" firstAttribute="top" secondItem="O2l-NJ-Qya" secondAttribute="top" id="DpJ-uD-zRx"/>
-                                    <constraint firstItem="2dO-e7-qoA" firstAttribute="top" secondItem="N2I-T0-Myw" secondAttribute="bottom" id="IgD-gl-Czw"/>
+                                    <constraint firstItem="2dO-e7-qoA" firstAttribute="top" secondItem="mtD-lE-chP" secondAttribute="bottom" id="Pxt-je-rTi"/>
                                     <constraint firstAttribute="trailing" secondItem="2zR-Eo-JAU" secondAttribute="trailing" id="QzZ-yj-AY8"/>
                                     <constraint firstItem="2dO-e7-qoA" firstAttribute="leading" secondItem="O2l-NJ-Qya" secondAttribute="leading" id="SfU-Ii-25h"/>
-                                    <constraint firstItem="N2I-T0-Myw" firstAttribute="leading" secondItem="O2l-NJ-Qya" secondAttribute="leading" id="YAf-VI-ygG"/>
+                                    <constraint firstItem="mtD-lE-chP" firstAttribute="top" secondItem="O2l-NJ-Qya" secondAttribute="top" id="ThC-YC-S6Z"/>
                                     <constraint firstAttribute="bottom" secondItem="2dO-e7-qoA" secondAttribute="bottom" id="aFi-Bz-hDd"/>
                                     <constraint firstAttribute="trailing" secondItem="2dO-e7-qoA" secondAttribute="trailing" id="fRJ-mJ-S41"/>
-                                    <constraint firstItem="2zR-Eo-JAU" firstAttribute="leading" secondItem="N2I-T0-Myw" secondAttribute="trailing" id="kek-D7-7NR"/>
-                                    <constraint firstItem="N2I-T0-Myw" firstAttribute="top" secondItem="O2l-NJ-Qya" secondAttribute="top" constant="2" id="l9i-Zj-7Jz"/>
                                     <constraint firstItem="2dO-e7-qoA" firstAttribute="top" secondItem="2zR-Eo-JAU" secondAttribute="bottom" id="s21-XV-jS8"/>
+                                    <constraint firstItem="2zR-Eo-JAU" firstAttribute="leading" secondItem="mtD-lE-chP" secondAttribute="trailing" id="ymE-xn-Pew"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TKj-U5-ypM">
@@ -101,12 +101,9 @@
                                                 <color key="value" name="textFieldPlaceholderColor"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="horizontalInset">
-                                                <real key="value" value="4"/>
+                                                <real key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <outlet property="delegate" destination="cP3-Rg-FS5" id="fm1-Ci-ERP"/>
-                                        </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3c-TD-4hO">
                                         <rect key="frame" x="335" y="0.0" width="35" height="46"/>
@@ -155,7 +152,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Strong&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Es-aP-kdv" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                <rect key="frame" x="160.66666666666666" y="340" width="54" height="18"/>
+                                <rect key="frame" x="160.66666666666666" y="340" width="53.666666666666657" height="18"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="15"/>
                                 <color key="textColor" name="SecondaryThemeColor"/>
                                 <nil key="highlightedColor"/>
@@ -193,9 +190,6 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="diagonalMode" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <navigationItem key="navigationItem" title="Import Wallet" leftItemsSupplementBackButton="YES" id="EgP-UF-3OZ">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="OO0-me-JeV"/>
-                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gck-cV-gYk" sceneMemberID="firstResponder"/>
             </objects>
@@ -213,7 +207,10 @@
             <size key="intrinsicContentSize" width="126.66666666666667" height="17.666666666666668"/>
         </designable>
         <designable name="Qrr-G9-IAp">
-            <size key="intrinsicContentSize" width="138.66666666666666" height="20"/>
+            <size key="intrinsicContentSize" width="148.66666666666666" height="20"/>
+        </designable>
+        <designable name="mtD-lE-chP">
+            <size key="intrinsicContentSize" width="129" height="21.666666666666668"/>
         </designable>
     </designables>
     <resources>
