--- a/Stealth777/Modules/MAIN STORYBOARD/Base.lproj/Main.storyboard
+++ b/Stealth777/Modules/MAIN STORYBOARD/Base.lproj/Main.storyboard
@@ -69,9 +69,6 @@
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                 <real key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
-                                                <color key="value" name="encyptionNoteBgColor"/>
-                                            </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="importWalletBtnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4in-3W-0PY"/>
@@ -111,6 +108,9 @@
                                             </attributedString>
                                             <color key="baseForegroundColor" systemColor="labelColor"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="termaAndConditionsBtnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VUr-cg-tad"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="rS6-Zl-wya">
                                         <rect key="frame" x="88.333333333333329" y="398.66666666666669" width="45.999999999999986" height="50"/>
@@ -168,9 +168,7 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="diagonalMode" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </view>
-                    <navigationItem key="navigationItem" title="Import Wallet" leftItemsSupplementBackButton="YES" id="Wzg-M1-snS">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="Ttt-9b-Lrr"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Import Wallet" leftItemsSupplementBackButton="YES" id="Wzg-M1-snS"/>
                     <nil key="simulatedTopBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -208,9 +206,6 @@
         </namedColor>
         <namedColor name="blackLabelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="encyptionNoteBgColor">
-            <color red="0.94117647058823528" green="0.97647058823529409" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="navigationBarTitleColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
