--- a/Stealth777/Modules/SIGN UP/View/EnterUsernameStoryboard.storyboard
+++ b/Stealth777/Modules/SIGN UP/View/EnterUsernameStoryboard.storyboard
@@ -26,18 +26,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BZW-hC-HHE">
-                                <rect key="frame" x="149.66666666666669" y="104.00000000000001" width="128.66666666666669" height="128.33333333333337"/>
+                                <rect key="frame" x="150" y="104" width="128" height="128"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="1Zi-de-1gn">
-                                        <rect key="frame" x="0.0" y="0.0" width="128.66666666666666" height="128.33333333333334"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="1Zi-de-1gn" customClass="UIImageViewCustomClass" customModule="Stealth777" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="round" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="editProfileImageIcon" translatesAutoresizingMaskIntoConstraints="NO" id="fge-rJ-F64">
-                                        <rect key="frame" x="96.666666666666686" y="96.333333333333343" width="25" height="25"/>
+                                        <rect key="frame" x="96" y="96" width="25" height="25"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mYL-n1-ala">
-                                        <rect key="frame" x="0.0" y="0.0" width="128.66666666666666" height="128.33333333333334"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="chooseProfileImageBtnAction:" destination="Lbc-eu-V9Z" eventType="touchUpInside" id="0fB-Kc-s3g"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -48,6 +54,7 @@
                                     <constraint firstItem="1Zi-de-1gn" firstAttribute="top" secondItem="BZW-hC-HHE" secondAttribute="top" id="GvP-Hs-CjI"/>
                                     <constraint firstAttribute="trailing" secondItem="1Zi-de-1gn" secondAttribute="trailing" id="TUy-DO-Z3M"/>
                                     <constraint firstItem="fge-rJ-F64" firstAttribute="trailing" secondItem="1Zi-de-1gn" secondAttribute="trailing" constant="-7" id="UJl-4g-6xd"/>
+                                    <constraint firstAttribute="width" constant="128" id="WZe-x5-fpp"/>
                                     <constraint firstAttribute="width" secondItem="BZW-hC-HHE" secondAttribute="height" multiplier="1:1" id="Yk9-nR-cwF"/>
                                     <constraint firstItem="1Zi-de-1gn" firstAttribute="leading" secondItem="BZW-hC-HHE" secondAttribute="leading" id="Zjb-hl-iuK"/>
                                     <constraint firstItem="mYL-n1-ala" firstAttribute="leading" secondItem="BZW-hC-HHE" secondAttribute="leading" id="d8b-7g-Yh4"/>
@@ -68,17 +75,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rNp-Ok-0Df">
-                                        <rect key="frame" x="335" y="0.0" width="35" height="46"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="35" id="RtP-el-nFg"/>
-                                        </constraints>
-                                        <color key="tintColor" name="SecondaryThemeColor"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" image="tickIcon"/>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="777 -" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rsv-Ft-PDi" customClass="UILabelCustomClass" customModule="Stealth777" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="13.333333333333369" width="40" height="21.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="13.333333333333371" width="40" height="21"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="18"/>
                                         <color key="textColor" name="SecondaryThemeColor"/>
                                         <nil key="highlightedColor"/>
@@ -88,26 +86,34 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="textColor" name="subHeadingColor"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="18"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                                                 <color key="value" name="textFieldPlaceholderColor"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="Lbc-eu-V9Z" id="9CO-Il-9xT"/>
+                                        </connections>
                                     </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tickIcon" translatesAutoresizingMaskIntoConstraints="NO" id="DHm-GG-DRE">
+                                        <rect key="frame" x="335" y="17.666666666666686" width="35" height="11.333333333333336"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="qyF-g3-w1m"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="DHm-GG-DRE" secondAttribute="trailing" constant="-2" id="2Z9-v2-WVK"/>
                                     <constraint firstAttribute="bottom" secondItem="GKh-nf-yia" secondAttribute="bottom" id="4uU-tW-LBS"/>
                                     <constraint firstItem="Rsv-Ft-PDi" firstAttribute="leading" secondItem="eKc-bp-Cbg" secondAttribute="leading" id="6wb-qK-SHv"/>
                                     <constraint firstAttribute="trailing" secondItem="GKh-nf-yia" secondAttribute="trailing" id="7aE-u7-y2D"/>
+                                    <constraint firstItem="DHm-GG-DRE" firstAttribute="leading" secondItem="bjY-VL-9rk" secondAttribute="trailing" id="8L5-9J-6xG"/>
                                     <constraint firstItem="bjY-VL-9rk" firstAttribute="top" secondItem="eKc-bp-Cbg" secondAttribute="top" constant="2" id="HMJ-qy-skK"/>
-                                    <constraint firstItem="rNp-Ok-0Df" firstAttribute="top" secondItem="eKc-bp-Cbg" secondAttribute="top" id="QqI-T2-zqr"/>
+                                    <constraint firstItem="DHm-GG-DRE" firstAttribute="centerY" secondItem="eKc-bp-Cbg" secondAttribute="centerY" id="Mi0-8F-fmN"/>
                                     <constraint firstItem="GKh-nf-yia" firstAttribute="leading" secondItem="eKc-bp-Cbg" secondAttribute="leading" id="XpS-1M-xcA"/>
                                     <constraint firstItem="GKh-nf-yia" firstAttribute="top" secondItem="bjY-VL-9rk" secondAttribute="bottom" id="dgm-tf-22V"/>
-                                    <constraint firstAttribute="trailing" secondItem="rNp-Ok-0Df" secondAttribute="trailing" constant="-2" id="e7N-Lf-IKY"/>
-                                    <constraint firstItem="GKh-nf-yia" firstAttribute="top" secondItem="rNp-Ok-0Df" secondAttribute="bottom" id="mOE-g5-o18"/>
-                                    <constraint firstItem="rNp-Ok-0Df" firstAttribute="leading" secondItem="bjY-VL-9rk" secondAttribute="trailing" id="pO8-oG-4Bz"/>
                                     <constraint firstItem="Rsv-Ft-PDi" firstAttribute="centerY" secondItem="bjY-VL-9rk" secondAttribute="centerY" id="qnD-T2-kNo"/>
                                     <constraint firstItem="bjY-VL-9rk" firstAttribute="leading" secondItem="eKc-bp-Cbg" secondAttribute="leading" constant="50" id="rhi-59-392"/>
                                 </constraints>
@@ -135,7 +141,6 @@
                         <constraints>
                             <constraint firstItem="eKc-bp-Cbg" firstAttribute="leading" secondItem="zlT-kB-6St" secondAttribute="leading" constant="30" id="8XL-Qy-8rH"/>
                             <constraint firstItem="zlT-kB-6St" firstAttribute="trailing" secondItem="eKc-bp-Cbg" secondAttribute="trailing" constant="30" id="L5G-0G-uFo"/>
-                            <constraint firstItem="BZW-hC-HHE" firstAttribute="width" secondItem="BkB-zc-qBg" secondAttribute="width" multiplier="0.3" id="O9H-WH-QtV"/>
                             <constraint firstItem="w15-mb-zpR" firstAttribute="centerY" secondItem="zlT-kB-6St" secondAttribute="centerY" multiplier="1.3" id="Qmg-Li-g7z"/>
                             <constraint firstItem="eKc-bp-Cbg" firstAttribute="centerY" secondItem="zlT-kB-6St" secondAttribute="centerY" multiplier="0.92" id="RnK-QA-24a"/>
                             <constraint firstItem="eKc-bp-Cbg" firstAttribute="height" secondItem="BkB-zc-qBg" secondAttribute="height" multiplier="0.05" id="Xk7-4Q-BX4"/>
@@ -156,13 +161,22 @@
                             <userDefinedRuntimeAttribute type="boolean" keyPath="horizontalMode" value="NO"/>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <connections>
+                        <outlet property="continueBtn" destination="w15-mb-zpR" id="0XK-KY-Twa"/>
+                        <outlet property="enterUsernameTxtField" destination="bjY-VL-9rk" id="sJs-rx-Ln0"/>
+                        <outlet property="profileImgView" destination="1Zi-de-1gn" id="UC3-OW-huR"/>
+                        <outlet property="verifiedUsernameImgView" destination="DHm-GG-DRE" id="q9G-Ys-Qh9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YWB-dX-YAC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1761" y="-54"/>
+            <point key="canvasLocation" x="1760.7476635514017" y="-54.427645788336939"/>
         </scene>
     </scenes>
     <designables>
+        <designable name="1Zi-de-1gn">
+            <size key="intrinsicContentSize" width="124" height="124"/>
+        </designable>
         <designable name="Rsv-Ft-PDi">
             <size key="intrinsicContentSize" width="40" height="21.333333333333332"/>
         </designable>
